# MultiNEAT

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDS  Dockerfile  Doxyfile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: c-cpp.yml  python.yml
cmake/: MultiNEATConfig.cmake.in
conda/: meta.yaml
docs/html/: ActivationFunction_8cpp.html  ActivationFunction_8cpp__incl.map  ActivationFunction_8cpp__incl.md5  ActivationFunction_8cpp_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Connection_8cpp.html  Connection_8cpp__incl.map  Connection_8cpp__incl.md5  Connection_8cpp_source.html  Genes_8cpp.html  Genes_8cpp_8o_8d.html  Genes_8cpp_8o_8d_source.html  Genes_8cpp__incl.map  Genes_8cpp__incl.md5  Genes_8cpp_source.html  Genes_8h.html  Genes_8h__dep__incl.map  Genes_8h__dep__incl.md5  Genes_8h__incl.map  Genes_8h__incl.md5  Genes_8h_source.html  Genome_8cpp.html  Genome_8cpp_8o_8d.html  Genome_8cpp_8o_8d_source.html  Genome_8cpp__incl.map  Genome_8cpp__incl.md5  Genome_8cpp_source.html  Genome_8h.html  Genome_8h__dep__incl.map  Genome_8h__dep__incl.md5  Genome_8h__incl.map  Genome_8h__incl.md5  Genome_8h_source.html  InnovationDatabase_8cpp.html  InnovationDatabase_8cpp__incl.map  InnovationDatabase_8cpp__incl.md5  InnovationDatabase_8cpp_source.html  Innovation_8cpp.html  Innovation_8cpp_8o_8d.html  (+610 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+106 more)
src/: Genes.cpp  Genes.h  Genome.cpp  Genome.h  Innovation.cpp  Innovation.h  NeuralNetwork.cpp  NeuralNetwork.h  Parameters.cpp  Parameters.h  PhenotypeBehavior.h  Population.h  Random.cpp  Random.h  Species.cpp  Species.h  Substrate.cpp  Substrate.h  Traits.cpp  Traits.h
src/python/: ActivationFunction.cpp  Connection.cpp  Genome.cpp  Innovation.cpp  InnovationDatabase.cpp  LinkGene.cpp  Lists.cpp  NeuralNetwork.cpp  Neuron.cpp  NeuronGene.cpp  NeuronType.cpp  Parameters.cpp  PhenotypeBehavior.cpp  Population.cpp  PythonBindings.cpp  RNG.cpp  SearchMode.cpp  Species.cpp  Substrate.cpp
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  test_raw_genome.py  test_xor.py
tests/serialization/: CMakeLists.txt  analize_genome_file.cpp  serialize_genome.cpp  serialize_innovation_database.cpp  test.py
tests/xor/: main.cpp
